compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@pub_property.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {\n            pub x: Int32 = 1;\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:7:10,
                            },
                            type_arguments: [],
                            location: <internal>:7:10,
                        },
                        location: <internal>:7:10,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [
                        Property {
                            id: Property(
                                PropertyId {
                                    item: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            prop_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "x",
                                location: <internal>:29:30,
                            },
                            property_type: Type {
                                id: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        6143724420395906933,
                                    ),
                                },
                                name: Path {
                                    root: [
                                        Namespace {
                                            name: Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        },
                                    ],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:32:37,
                                        },
                                        type_arguments: [],
                                        location: <internal>:32:37,
                                    },
                                    location: <internal>:32:37,
                                },
                                location: <internal>:32:37,
                            },
                            default_value: Some(
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        index: Idx(
                                            0,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        1,
                                                    ),
                                                },
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:40:41,
                                        },
                                    ),
                                    location: <internal>:40:41,
                                },
                            ),
                            location: <internal>:25:42,
                        },
                    ],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:52,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        ExpressionId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    1,
                ),
            },
            index: Idx(
                0,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                index: Idx(
                    0,
                ),
            },
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        index: Idx(
                            0,
                        ),
                    },
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                index: Idx(
                                    0,
                                ),
                            },
                            value: 1,
                            kind: I32,
                        },
                    ),
                    location: <internal>:40:41,
                },
            ),
            location: <internal>:40:41,
        },
    },
}
