compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@constrained_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add<T: Numeric> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14895811466431262429,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        14895811466431262429,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                            type_arguments: [],
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    visibility: Private,
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T",
                                    location: <internal>:10:11,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            12406655113887153806,
                                        ),
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:13:20,
                                                },
                                                type_arguments: [],
                                                location: <internal>:13:20,
                                            },
                                            location: <internal>:13:20,
                                        },
                                        location: <internal>:13:20,
                                    },
                                ],
                                location: <internal>:10:11,
                            },
                        ],
                    },
                    methods: [],
                    location: <internal>:0:24,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
