compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@constrained_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add<T1: Numeric, T2: Numeric> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5526834839950128201,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        5526834839950128201,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                        ),
                        location: <internal>:6:9,
                    },
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:10:12,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            6129574414018423941,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:14:21,
                                                },
                                            ),
                                            location: <internal>:14:21,
                                        },
                                        type_params: [],
                                        location: <internal>:14:21,
                                    },
                                ],
                                location: <internal>:10:12,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:23:25,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            6129574414018423941,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:27:34,
                                                },
                                            ),
                                            location: <internal>:27:34,
                                        },
                                        type_params: [],
                                        location: <internal>:27:34,
                                    },
                                ],
                                location: <internal>:23:25,
                            },
                        ],
                    },
                    methods: [],
                    location: <internal>:0:38,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
