compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14895811466431262429,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        14895811466431262429,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                            type_arguments: [],
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    methods: [],
                    location: <internal>:0:13,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
