compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add<T> { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14895811466431262429,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        14895811466431262429,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                            type_arguments: [],
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    visibility: Private,
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T",
                                    location: <internal>:10:11,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:10:11,
                            },
                        ],
                    },
                    methods: [],
                    location: <internal>:0:16,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
