compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add<T1, T2> { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14895811466431262429,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        14895811466431262429,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                            type_arguments: [],
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:10:12,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:10:12,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:14:16,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:14:16,
                            },
                        ],
                    },
                    methods: [],
                    location: <internal>:0:21,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
