compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@method_impl.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add { pub fn add(other: int) -> int { } }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14895811466431262429,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        14895811466431262429,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                            type_arguments: [],
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    visibility: Private,
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    methods: [
                        TraitMethodDefinition {
                            id: Method(
                                MethodId {
                                    item: ItemId(
                                        14895811466431262429,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            method_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "add",
                                location: <internal>:19:22,
                            },
                            parameters: [
                                Parameter {
                                    index: 0,
                                    name: Identifier {
                                        name: "other",
                                        location: <internal>:23:28,
                                    },
                                    param_type: Type {
                                        id: ItemId(
                                            7468397361300629741,
                                        ),
                                        name: Path {
                                            root: [],
                                            name: Namespace {
                                                name: Identifier {
                                                    name: "int",
                                                    location: <internal>:30:33,
                                                },
                                            },
                                            location: <internal>:30:33,
                                        },
                                        location: <internal>:30:33,
                                    },
                                    vararg: false,
                                    location: <internal>:23:33,
                                },
                            ],
                            type_parameters: TypeParameters {
                                inner: [],
                            },
                            return_type: Type {
                                id: ItemId(
                                    7468397361300629741,
                                ),
                                name: Path {
                                    root: [],
                                    name: Namespace {
                                        name: Identifier {
                                            name: "int",
                                            location: <internal>:38:41,
                                        },
                                    },
                                    location: <internal>:38:41,
                                },
                                location: <internal>:38:41,
                            },
                            block: Some(
                                Block {
                                    statements: [],
                                    location: <internal>:42:45,
                                },
                            ),
                            location: <internal>:16:45,
                        },
                    ],
                    location: <internal>:0:47,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
