compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@method_no_ret.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add { pub fn add(other: int) { } }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5526834839950128201,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        5526834839950128201,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                        ),
                        location: <internal>:6:9,
                    },
                    type_parameters: [],
                    methods: [
                        TraitMethodDefinition {
                            method_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "add",
                                location: <internal>:19:22,
                            },
                            parameters: [
                                Parameter {
                                    name: Identifier {
                                        name: "other",
                                        location: <internal>:23:28,
                                    },
                                    param_type: Type {
                                        id: ItemId(
                                            4873327510373585985,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "int",
                                                    location: <internal>:30:33,
                                                },
                                            ),
                                            location: <internal>:30:33,
                                        },
                                        type_params: [],
                                        location: <internal>:30:33,
                                    },
                                    location: <internal>:23:33,
                                },
                            ],
                            type_parameters: [],
                            return_type: None,
                            block: Some(
                                Block {
                                    statements: [],
                                    location: <internal>:35:38,
                                },
                            ),
                            location: <internal>:16:38,
                        },
                    ],
                    location: <internal>:0:40,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
