compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__trait_snapshots@private_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Add { fn add(other: int) -> int }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5526834839950128201,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        5526834839950128201,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Add",
                                location: <internal>:6:9,
                            },
                        ),
                        location: <internal>:6:9,
                    },
                    type_parameters: [],
                    methods: [
                        TraitMethodDefinition {
                            id: ItemId(
                                4915573846357939171,
                            ),
                            method_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "add",
                                location: <internal>:15:18,
                            },
                            parameters: [
                                Parameter {
                                    name: Identifier {
                                        name: "other",
                                        location: <internal>:19:24,
                                    },
                                    param_type: Type {
                                        id: ItemId(
                                            4873327510373585985,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "int",
                                                    location: <internal>:26:29,
                                                },
                                            ),
                                            location: <internal>:26:29,
                                        },
                                        type_params: [],
                                        location: <internal>:26:29,
                                    },
                                    location: <internal>:19:29,
                                },
                            ],
                            type_parameters: [],
                            return_type: Some(
                                Type {
                                    id: ItemId(
                                        4873327510373585985,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "int",
                                                location: <internal>:34:37,
                                            },
                                        ),
                                        location: <internal>:34:37,
                                    },
                                    type_params: [],
                                    location: <internal>:34:37,
                                },
                            ),
                            block: None,
                            location: <internal>:12:37,
                        },
                    ],
                    location: <internal>:0:39,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
