compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__type_alias_snapshots@array.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "type A = [B]"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14300676183875094141,
        ): Type(
            Alias(
                AliasDefinition {
                    id: ItemId(
                        14300676183875094141,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "A",
                                location: <internal>:5:6,
                            },
                        ),
                        location: <internal>:5:6,
                    },
                    definition: Type {
                        id: ItemId(
                            16920226291260836396,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [
                                        Named(
                                            Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "Array",
                                    location: <internal>:0:0,
                                },
                            ),
                            location: <internal>:0:0,
                        },
                        type_params: [
                            Type {
                                id: ItemId(
                                    3994735493679760258,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "B",
                                            location: <internal>:10:11,
                                        },
                                    ),
                                    location: <internal>:10:11,
                                },
                                type_params: [],
                                location: <internal>:10:11,
                            },
                        ],
                        location: <internal>:0:0,
                    },
                    location: <internal>:0:12,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
